alignment fix

--- a/src/app/webex-layout/space-details/space-details.component.scss
+++ b/src/app/webex-layout/space-details/space-details.component.scss
@@ -52,6 +52,8 @@ li {
 }
 .him {
   float: left;
+  font-size: 12px;
+  padding: 8px;
   white-space:pre-wrap;
   border-radius: 1rem;
   background-color: #7f53ac;
